--- a/resume-site/package.json
+++ b/resume-site/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://JoshFen.github.io/Resume-Site",
+  "homepage": "https://joshfen.github.io/Resume-Site/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
