--- a/resume-site/package.json
+++ b/resume-site/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://joshfen.github.io/Resume-Site",
+  "homepage": "https://joshfen.github.io/me",
   "name": "resume-site",
   "private": true,
   "version": "0.0.0",
